# SmartMakker

./: LICENSE
responsible-ai-gpt2-proto-main/: .gitignore  README.md
responsible-ai-gpt2-proto-main/archive/local_trainer/: deepspeed_3_cpu.json  notebook_library_generator.ipynb  notebook_library_trainer.ipynb  notebook_tranformers_implementation.ipynb  r_ai_library_trainer.py  torch_debugging.py  transformers_trainer.py
responsible-ai-gpt2-proto-main/archive/models_evaluation/: models_comparitive_analysis.md
responsible-ai-gpt2-proto-main/archive/prototyping/: lightning_backend_prototype.ipynb
responsible-ai-gpt2-proto-main/generative_ai_library/: README.md  pyproject.toml  system_design.uxf
responsible-ai-gpt2-proto-main/generative_ai_library/generative_ai/: trainers.py
responsible-ai-gpt2-proto-main/generative_ai_library/generative_ai/generators/: hugging_face_generator.py
responsible-ai-gpt2-proto-main/generative_ai_library/generative_ai/lightning_modules/: gpt_data_module.py  gpt_fine_tuner.py
responsible-ai-gpt2-proto-main/notebook_trainer/: notebook_r_ai_library_test.ipynb
responsible-ai-gpt2-proto-main/script_trainer/: script_r_ai_library_deepspeed_test.py  script_r_ai_library_test.py
responsible-ai-music-scraper-proto-main/: .gitignore  config_400_400_200_25.json  nohup.out  package_overview.uxf  system_overview.uxf
responsible-ai-music-scraper-proto-main/cli_data_scraper/: LICENSE  README.md  pyproject.toml
responsible-ai-music-scraper-proto-main/cli_data_scraper/data_collector/: data_scraper.py
responsible-ai-music-scraper-proto-main/cli_data_scraper/data_collector/backends/: __init__.py  backend_registery.py  collector_pipeline.py  genius_backend.py  short_stories_backend.py  thousand_and_one_gedichten_backend.py  thousand_and_one_stories.py
responsible-ai-music-scraper-proto-main/cli_data_scraper/data_collector/data_io/: data_writer.py  input_config_parser.py  run_configuration.py
responsible-ai-music-scraper-proto-main/cli_data_scraper/data_collector/text_computing/: text_container.py  text_manipulation_passes.py  text_manipulation_pipeline.py
responsible-ai-music-scraper-proto-main/cli_data_scraper/tests/: cli.ipynb  input_config_.ipynb  test_pipeline_builder.ipynb  text_passes.py
responsible-ai-music-scraper-proto-main/cli_data_scraper/tests/cli_test/: config.json
responsible-ai-music-scraper-proto-main/cli_data_scraper/tests/output/: help.csv  help.json
responsible-ai-music-scraper-proto-main/cli_data_scraper/tests/resources/: config_template.json
responsible-ai-music-scraper-proto-main/notebook_scraper/: config_genius.json  config_short_stories.json  running_env_genius.ipynb  running_env_short_stories.ipynb
responsible-ai-music-scraper-proto-main/notebook_scraper/output/: genius.csv  genius.json
responsible-ai-web-app-main/: .gitattributes  .gitignore  .gitmodules  README.md  demo_gradio.ipynb
responsible-ai-web-app-main/flaskProject2/: app.py  profanity.txt
responsible-ai-web-app-main/flaskProject2/blueprints/: lyric_generator.py
responsible-ai-web-app-main/flaskProject2/templates/: index.html
responsible-ai-web-app-main/front_end/: frontpage.html  stylesheet.css
responsible-ai-web-app-main/lyrics_gen_api/: README.md  pyproject.toml
responsible-ai-web-app-main/lyrics_gen_api/lyrics_gen/: generator.py
responsible-ai-web-app-main/lyrics_gen_api/tests/unittests/: test_lyrics_gen.py
responsible-ai-web-app-main/team_agreements/: ARTIFACTS.md  COLLABORATION.md  CONVENTIONS.md
(+34 files in other folders)
