[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "responsible_generative_ai"
version = "1.0.0"
authors = [
    { name = "Winand Metz", email = "winand.metz@hva.nl" },
    { name = "Caleigh Esterhuyse", email = "caleigh.esterhuyse@hva.nl" }
]
description = "A package which holds tools usefull for generative AI text generation. In this case dutch \"smartlap lyrics\""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "transformers>=4.29.0",
    "wheel>=0.40.0",
    "lightning>=0",
    "torch>=2.0.0",
    "optimum>=1.8.0",
    "xformers>=0.0.20"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Source" = "https://gitlab.fdmci.hva.nl/metzwm/responsible-ai-gpt2-proto"
"Bug Tracker" = "https://gitlab.fdmci.hva.nl/metzwm/responsible-ai-gpt2-proto/-/issues"

[tool.hatch.build]
ignore-vcs = true
